# used-car-price-service

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: CI-CD.yml
app/: db.py  main.py  models.py  schemas.py
app/static/: app.html  app.js  index.html  style.css
docker/: Dockerfile  docker-compose.yml
ml/: train.py
ml/notebooks/: eda.ipynb  preprocessing.ipynb
models/: model.joblib  preprocessor.joblib
notebooks/: eda.ipynb
tests/: conftest.py  test_api.py  test_pipeline.py  test_schemas.py
