[project]
name = "pythonproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.1",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]
