[project]
name = "used-car-service"
version = "0.1.0"
description = "service which allow user to predict price of his car in few clicks"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "joblib>=1.5.3",
    "matplotlib>=3.10.9",
    "numpy>=2.2.6",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "sqlmodel>=0.0.39",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
